--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ margine:20px;
     </p>
 
   <footer class="mt-auto text-white-50">
-    <p>Copyright of &copy <!--<a href="https://getbootstrap.com/" class="text-white"-->Aniket Shukla</a><!--, by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>-->.</p>
+    <p>&copy 2021<!--<a href="https://getbootstrap.com/" class="text-white"--> Aniket Shukla. All Copyrights Reserved</a><!--, by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>-->.</p>
   </footer>
 </div>
 
