--- a/Intro.html
+++ b/Intro.html
@@ -42,7 +42,7 @@
       <h3 class="float-md-start mb-0">Aniket Shukla</h3>
       <nav class="nav nav-masthead justify-content-center float-md-end">
         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-        <a class="nav-link" href="https://docs.google.com/document/d/1vKvR_luEY7VgjbJYSbn8gGwGiTLS71EFzyqfIiMod3s/edit?usp=sharing">Resume</a>
+        <a class="nav-link" href="https://drive.google.com/file/d/1GheSrtw6R1zh7H2mgI9hzgh6PIbSOzux/view?usp=sharing">Resume</a>
         <a class="nav-link" href="socials.html">Socials</a>
         <a class="nav-link" href="mailto:aniketshukla1404@gmail.com">Mail</a>
         <a class="nav-link" href="project.html">Projects</a>
