--- a/Intro.html
+++ b/Intro.html
@@ -57,7 +57,7 @@ My interest area also shares its space with Robotics, have made a number of bots
 At present, I am looking forward to develop my skills set by gaining knowledge and putting my hands-on experience.</p>
   
  <footer class="mt-auto text-white-50">
-    <p>Copyright of &copy  <!--<a href="https://getbootstrap.com/" class="text-white"-->Aniket Shukla</a><!--, by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>-->.</p>
+    <p>&copy 2021<!--<a href="https://getbootstrap.com/" class="text-white"--> Aniket Shukla. All Copyrights Reserved</a><!--, by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>-->.</p>
   </footer>
 </div>
 
