--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ margine:20px;
         <a class="nav-link" href="socials.html">Socials</a>
         <a class="nav-link" href="mailto:aniketshukla1404@gmail.com">Mail</a>
         <a class="nav-link" href="https://github.com/AniketShukla14?tab=repositories">Projects</a>
-        <a class="nav-link" href="certificates.html">Certificates</a>
+        <a class="nav-link" href="https://www.credential.net/profile/aniketshukla841387/wallet">Certificates</a>
       </nav>
     </div>
   </header>
