--- a/socials.html
+++ b/socials.html
@@ -134,7 +134,7 @@
 </style>
  
 </head>
- <body style="background-color:black;text-align:center">
+ <body style="background-color:#1a2126;text-align:center">
 
 <h2 style="color:white;"> Social Media links </h2>
 
