--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ margine:20px;
         <a class="nav-link" href="https://drive.google.com/file/d/1GheSrtw6R1zh7H2mgI9hzgh6PIbSOzux/view?usp=sharing">Resume</a>
         <a class="nav-link" href="socials.html">Socials</a>
         <a class="nav-link" href="mailto:aniketshukla1404@gmail.com">Mail</a>
-        <a class="nav-link" href="https://github.com/AniketShukla14?tab=repositories">Projects</a>
+        <a class="nav-link" href="index1.html">Projects</a>
         <a class="nav-link" href="https://www.credential.net/profile/aniketshukla841387/wallet">Certificates</a>
       </nav>
     </div>
