--- a/index1.html
+++ b/index1.html
@@ -217,9 +217,9 @@ body {
    
     <div class="card">
       <h3>Follow Me</h3>
-      <h4>Github:</h4> <a href="https://github.com/AniketShukla14">https://github.com/AniketShukla14</a>
-      <h4>linkedin:</h4> <a href="https://www.linkedin.com/in/aniketshukla14/">https://www.linkedin.com/in/aniketshukla14/</a>
-      <h4>Instagram:</h4>  <a href="https://www.instagram.com/aniketshukla14/">https://www.instagram.com/aniketshukla14/</a>
+      <h4>Github:</h4> <a href="https://github.com/AniketShukla14">Github/Aniket Shukla</a>
+      <h4>linkedin:</h4> <a href="https://www.linkedin.com/in/aniketshukla14/">Linkedin/Aniket Shukla</a>
+      <h4>Instagram:</h4>  <a href="https://www.instagram.com/aniketshukla14/">Instagram/Aniket Shukla</a>
     </div>
   </div>
 </div>
