--- a/index1.html
+++ b/index1.html
@@ -225,7 +225,9 @@ body {
 </div>
 
 <div class="footer">
-  <h2>Footer</h2>
+
+   <p>&copy 2021<!--<a href="https://getbootstrap.com/" class="text-white"--> Aniket Shukla. All Copyrights Reserved</a><!--, by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>-->.</p>
+  
 </div>
 
 </body>
