--- a/index1.html
+++ b/index1.html
@@ -226,7 +226,7 @@ body {
 
 <div class="footer">
 
-   <p>&copy 2021<!--<a href="https://getbootstrap.com/" class="text-white"--> Aniket Shukla. All Copyrights Reserved</a><!--, by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>-->.</p>
+   <p>&copy 2021 Aniket Shukla. All Copyrights Reserved.</p>
   
 </div>
 
