--- a/index1.html
+++ b/index1.html
@@ -217,17 +217,20 @@ body {
    
     <div class="card">
       <h3>Follow Me</h3>
-      <h4>Github:</h4> <a href="https://github.com/AniketShukla14">Github/Aniket Shukla</a>
-      <h4>linkedin:</h4> <a href="https://www.linkedin.com/in/aniketshukla14/">Linkedin/Aniket Shukla</a>
-      <h4>Instagram:</h4>  <a href="https://www.instagram.com/aniketshukla14/">Instagram/Aniket Shukla</a>
+      <h4>Github:</h4> <a href="https://github.com/AniketShukla14">github/AniketShukla14</a>
+      <h4>linkedin:</h4> <a href="https://www.linkedin.com/in/aniketshukla14/">linkedin/aniketshukla14/</a>
+      <h4>Instagram:</h4>  <a href="https://www.instagram.com/aniketshukla14/">instagram/aniketshukla14/</a>
+    </div>
+    <div class="card">
+      <h2>Contact Me</h2>
+      <h4>Email:</h4> <a href="mailto:aniket14042001@gmail.com">aniket14042001@gmail.com</a>
     </div>
   </div>
 </div>
 
 <div class="footer">
-
-   <p>&copy 2021 Aniket Shukla. All Copyrights Reserved.</p>
-  
+  <p>&copy 2021<!--<a href="https://getbootstrap.com/" class="text-white"--> Aniket Shukla. All Copyrights Reserved</a><!--, by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>-->.</p>
+   
 </div>
 
 </body>
